--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ body{
     margin-left: 25%;
     transform: translateY(-30px);
     box-shadow: 0 3px 3px 0 rgb(238, 238, 238);
+    position: fixed;
 }
 
 .icon{
