--- a/css/style.css
+++ b/css/style.css
@@ -75,14 +75,18 @@ body{
 }
 
 .icon .nav-fab{
-    font-size: 30px;
-    font-weight: 100px;
-    color: #222;
+    font-size: 28px;
+    color: rgb(44, 44, 44);
     width: 27px;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
+
+.fa{
+    font-weight: 10px;
+}
+
 .icon a{
     text-decoration: none;
 }
