--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,16 @@ body{
     font-size: 16px;
 }
 
+.cv-btnn{
+    background-color: rgb(243 101 46);
+    padding: 15px 25px;
+    color: #e2e1e1;
+    font-size: 17px;
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+}
+
 .navbar{
     display: flex;
     width: 50%;
@@ -278,23 +288,11 @@ body{
     margin: 30px;
 }
 
-
-.certification{
-    display: flex;
-    justify-content: space-evenly;
-    background-color: rgb(45, 45, 61);
-    padding: 10px;
-}
-
-.certification img{
-    width: 100px;
-}
-
 .portfolio{
     width: 80%;
     margin: 20px auto;
     text-align: center;
-    padding: 50px 0 50px 0;
+    padding: 50px 0 30px 0;
 }
 
 .portfolio h1{
