--- a/css/footer.css
+++ b/css/footer.css
@@ -14,6 +14,10 @@ form {
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
+form h2{
+    margin-bottom: 20px;
+}
+
 .form-text{
     text-align: center;
 }
@@ -39,4 +43,10 @@ input[type=submit] {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+
+@media screen and (max-width: 767px){
+  form {
+        width: 100% !important;
+    }
 }
