--- a/css/footer.css
+++ b/css/footer.css
@@ -37,6 +37,14 @@ input[type=text], input[type=email], textarea {
     border-radius: 5px;
     background: transparent;
     border: 2px solid #fff;
+    font-size: 16px;
+    outline: none;
+}
+textarea{
+  height: 150px;
+  font-size: 16px;
+  resize: none;
+  outline: none;
 }
 input[type=submit] {
     background: #eeeef1;
