--- a/css/style.css
+++ b/css/style.css
@@ -386,6 +386,12 @@ label:active{
     cursor: pointer;
 }
 
+.project p {
+    color: #e75a2f;
+    font-weight: 500;
+    border: 2px solid #f5f5f5;
+}
+
 .section.certificate {
     display: flex;
     justify-content: space-around;
