--- a/css/style.css
+++ b/css/style.css
@@ -340,6 +340,7 @@ label:active{
     font-weight: bolder;
     color: rgb(48, 48, 48);
     font-size: 40px;
+    text-align: center;
     margin-bottom: 25px;
 }
 
@@ -390,6 +391,14 @@ label:active{
     color: #e75a2f;
     font-weight: 500;
     border: 2px solid #f5f5f5;
+}
+
+.testimonial h1{
+    font-weight: bolder;
+    color: rgb(48, 48, 48);
+    font-size: 40px;
+    text-align: center;
+    margin-top: 70px;
 }
 
 .section.certificate {
